--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
              <div class="row">
 			 
 				<div class="col-sm-6 pull-right wow fadeInRightBig">
-                    <img class="img-responsive " src="img/業主提供.jpg" alt="">
+                    <img class="img-responsive " src="圖片/業主提供.jpg" alt="">
                 </div>
 			 
                 <div class="col-sm-6 wow fadeInLeftBig"  data-animation-delay="200">   
