--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
              <div class="row">
 			 
 				<div class="col-sm-6 pull-right wow fadeInRightBig">
-                    <img class="img-responsive " src="C:\Users\User\Desktop\實習檔案\hck風格簡報\鄉村風\32527c922894ce54fc397d20e8a1e9e4.jpg" alt="">
+                    <img class="img-responsive " src="C:/Users/User/Desktop/實習檔案/hck風格簡報/鄉村風/32527c922894ce54fc397d20e8a1e9e4.jpg" alt="">
                 </div>
 			 
                 <div class="col-sm-6 wow fadeInLeftBig"  data-animation-delay="200">   
