--- a/index.html
+++ b/index.html
@@ -203,24 +203,24 @@
                      <div id="owl-demo-1" class="owl-carousel">
 						<a href="img/iphone.png" class="image-link">
 							<div class="item">
-								<img  class="img-responsive img-rounded" src="img/iphone.png" alt="">
+								<img  class="img-responsive img-rounded" src="img/Z_7 - 拍照模式.jpg" alt="">
 							</div>
 						</a>
 						<a href="img/iphone.png" class="image-link">
 							<div class="item">
-								<img  class="img-responsive img-rounded" src="img/iphone.png" alt="">
+								<img  class="img-responsive img-rounded" src="Z_19 - 拍照模式.jpg" alt="">
 							</div>
 						</a>
 						<a href="img/iphone.png" class="image-link">
 							<div class="item">
-								<img  class="img-responsive img-rounded" src="img/iphone.png" alt="">
+								<img  class="img-responsive img-rounded" src="img/Z_31 - 拍照模式.jpg" alt="">
 							</div>
 						</a>
 					</div>       
                 </div>
 				
                 <div class="col-sm-6 wow fadeInRightBig"  data-animation-delay="200">   
-                    <h3 class="section-heading">Drag Gallery</h3>
+                    <h3 class="section-heading">得獎作品</h3>
 					<div class="sub-title lead3">Lorem ipsum dolor sit atmet sit dolor greand fdanrh<br> sdfs sit atmet sit dolor greand fdanrh sdfs</div>
                     <p class="lead">
 						In his igitur partibus duabus nihil erat, quod Zeno commuta rest gestiret. 
