--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 						</a>
 						<a href="img/iphone.png" class="image-link">
 							<div class="item">
-								<img  class="img-responsive img-rounded" src="Z_19 - 拍照模式.jpg" alt="">
+								<img  class="img-responsive img-rounded" src="img/Z_19 - 拍照模式.jpg" alt="">
 							</div>
 						</a>
 						<a href="img/iphone.png" class="image-link">
