--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 					
 					<li class="menuItem"><a href="#whatis">關於</a></li>
 					<li class="menuItem"><a href="#useit">作品介紹</a></li>
-					<li class="menuItem"><a href="#screen">Screenshot</a></li>
+					<li class="menuItem"><a href="#screen">攝影</a></li>
 					<li class="menuItem"><a href="#credits">Credits</a></li>
 					<li class="menuItem"><a href="#contact">聯絡</a></li>
 				</ul>
