--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 		<div class="container">
 
 			<div class="col-md-6 col-md-offset-3 text-center wrap_title">
-				<h2>What is?</h2>
+				<h2>關於</h2>
 				<p class="lead" style="margin-top:0">室設系3A 108055428</p>
 				
 			</div>
@@ -117,8 +117,8 @@
 			
 				<div class="col-sm-4 wow fadeInDown text-center">
 				  <img class="rotate" src="img/icon/tweet.svg" alt="Generic placeholder image">
-				  <h3>Follow Me</h3>
-				  <p class="lead">Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. </p>
+				  <h3>基本資料</h3>
+				  <p class="lead">亞洲大學室內設計系3A                         商業空間組  </p>
 
 				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
