--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 				
                 <div class="col-sm-6 wow fadeInRightBig"  data-animation-delay="200">   
                     <h3 class="section-heading">得獎作品</h3>
-					<div class="sub-title lead3">Lorem ipsum dolor sit atmet sit dolor greand fdanrh<br> sdfs sit atmet sit dolor greand fdanrh sdfs</div>
+					<div class="sub-title lead3">鄉林皇居招待所設計案競圖<br> 金獎</div>
                     <p class="lead">
 						In his igitur partibus duabus nihil erat, quod Zeno commuta rest gestiret. 
 						Sed virtutem ipsam inchoavit, nihil ampliusuma. Scien tiam pollicentur, 
@@ -247,7 +247,7 @@
                 </div>
 			 
                 <div class="col-sm-6 wow fadeInLeftBig"  data-animation-delay="200">   
-                    <h3 class="section-heading">Font Awesome & Glyphicon</h3>
+                    <h3 class="section-heading">文旅設計</h3>
                     <p class="lead">A special thanks to Death to the Stock Photo for 
 					providing the photographs that you see in this template. 
 					</p>
