--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 					<li class="menuItem"><a href="#whatis">關於</a></li>
 					<li class="menuItem"><a href="#useit">作品介紹</a></li>
 					<li class="menuItem"><a href="#screen">攝影</a></li>
-					<li class="menuItem"><a href="#credits">Credits</a></li>
+					<li class="menuItem"><a href="#credits">推薦書單</a></li>
 					<li class="menuItem"><a href="#contact">聯絡</a></li>
 				</ul>
 			</div>
@@ -117,7 +117,7 @@
 			
 				<div class="col-sm-4 wow fadeInDown text-center">
 				  <img class="rotate" src="img/icon/tweet.svg" alt="Generic placeholder image">
-				  <h3>基本資料</h3>
+				  <h3>系所</h3>
 				  <p class="lead">亞洲大學室內設計系3A                         商業空間組  </p>
 
 				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
@@ -143,8 +143,8 @@
 			
 				<div class="col-sm-4  wow fadeInDown text-center">
 				  <img class="rotate" src="img/icon/laptop.svg" alt="Generic placeholder image">
-				  <h3>Responsive</h3>
-				  <p class="lead">Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. </p>
+				  <h3>出生</h3>
+				  <p class="lead">1999 06 29  </p>
 				 <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
 				
