--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 				<div class="col-sm-4 wow fadeInDown text-center">
 				  <img  class="rotate" src="img/icon/retina.svg" alt="Generic placeholder image">
 				   <h3>工具</h3>
-					<p class="lead">AutoCAD SketchUp V-Ray LayOut Twinmotion PowerPoint Adobe Photoshop </p>
+					<p class="lead">AutoCAD SketchUp V-Ray LayOut Twinmotion PowerPoint          Adobe Photoshop </p>
 				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
 				
@@ -352,7 +352,7 @@
 			<div class="row">
 			
 			<div class="col-md-6 col-md-offset-3 text-center wrap_title">
-				<h2>Credits</h2>
+				<h2>推薦書單</h2>
 				<p class="lead" style="margin-top:0">A special thanks to Death.</p>
 			 </div>
 			 
@@ -362,7 +362,7 @@
 							<i class="fa fa-desktop fa-4x "> </i> 
 						</div>
 						<div class="col-md-8 box-ct">
-							<h3> Bootstrap </h3>
+							<h3> 室內設計手繪製圖必學 </h3>
 							<p> Lorem ipsum dolor sit ametconsectetur adipiscing elit. Suspendisse orci quam. </p>
 						</div>
 				  </div>
@@ -412,8 +412,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3 text-center wrap_title">
-				<h2>Download Free</h2>
-				<p class="lead" style="margin-top:0">Pay with a Tweet</p>
+				<h2>台北世貿建材展資訊</h2>
+				<p class="lead" style="margin-top:0">20211104~20211107</p>
 				<p><a class="btn btn-embossed btn-primary view" role="button">Free Download</a></p> 
 			 </div>
 			</div>
